V2.0.5.0
- gapp: fix Google Map for geocaches with corrected coords
- gapp: change, main window menu image items are not scaled any more

V2.0.4.0
- gapp: fix icons in toolbar

V2.0.3.0
- gapp: fix auto start actions after startup
- gapp: change: Garmin POI export, replacement of characters altered
- gapp: script, added get favorites from globalcaching.eu script

V2.0.2.0
- gapp: requires .NET 4.5.1
- gapp: most IE browsers are replaced with CEF
- gapp: several bug fixes
- gapp: changed way of handling background tasks (async/await)
- gapp: settings are now located in 1 database with automatic fallback to backup if needed (replaced settings folders)
- gapp: setup has been changed
- gapp: all plugins and scripts are available after installation (no package manager any more)

V1.11.0.0
- gapp: add: Added GeoSpy support
- gappsf: add: Added GeoSpy support

V1.10.9.0
- gapp: fix: Cache list refresh when showing cache list after it has been closed
- gapp: fix: GSAK database import can handle empty LastGPXDate now
- gappsf: fix: GSAK database import can handle empty LastGPXDate now

V1.10.8.0
- gapp: fix: Internal web browser saving and restoring Pocket Query settings

V1.10.7.0
- gappsf: fix: Cachelist, fixed sorting on geocache type
- gappsf: fix: Cachelist, fixed color of archived
- gapp: fix: internal browser, create PQ series can read the new date format of project-gc

V1.10.6.0
- gappsf: fix: Deleting of geocaches with a UserWayoint caused the application to shut down.

V1.10.5.0
- gapp: fix: Live API, get personal notes a delay added between calls
- gappsf: fix: Live API, get personal notes a delay added between calls
- gapp: Munzee, removed import from munzee.dfx.at due to discontinued service
- gappsf: Munzee, removed import from munzee.dfx.at due to discontinued service
- gapp: fix: Removed dialog for downloading Open Street Maps due to discontinued (FTP) service
- gappsf: fix: Removed dialog for downloading Open Street Maps due to discontinued (FTP) service