@@ -1,6 +1,7 @@
 V2.0.5.0
 - gapp: fix Google Map for geocaches with corrected coords
 - gapp: change, main window menu image items are not scaled any more
+- gappsf: version check now done at new website (same as gapp)
 
 V2.0.4.0
 - gapp: fix icons in toolbar
